app2_yamls/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sample-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # change host as per your ingress
  - host: sample.docker.internal
    http:
      paths:
      - backend:
          serviceName: sample-service
          servicePort: 80
